<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/background_tarot"
        android:contentDescription="@string/background_image" />

    <Button
        android:id="@+id/buttonStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/border_background"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/buttonStart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:autofillHints=""
            android:background="@drawable/border"
            android:gravity="center"
            android:hint="@string/add_player"
            android:inputType="textShortMessage"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            tools:ignore="LabelFor" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:autofillHints=""
            android:background="@drawable/border"
            android:gravity="center"
            android:hint="@string/add_player"
            android:inputType="textShortMessage"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text=""
            tools:ignore="LabelFor" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:autofillHints=""
            android:background="@drawable/border"
            android:gravity="center"
            android:hint="@string/add_player"
            android:inputType="textShortMessage"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text=""
            tools:ignore="LabelFor" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:autofillHints=""
            android:background="@drawable/border"
            android:gravity="center"
            android:hint="@string/add_player"
            android:inputType="textShortMessage"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text=""
            tools:ignore="LabelFor" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>